--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-alpha.31",
+    "@material-ui/icons": "^5.0.0-alpha.29",
     "@material-ui/styles": "^4.11.3",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -14,21 +15,25 @@
     "@types/node": "^12.20.10",
     "@types/react-dom": "^17.0.3",
     "clsx": "^1.1.1",
+    "dayjs": "^1.10.4",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-redux": "^7.2.4",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "styled-components": "^5.2.3",
+    "swagger-axios-codegen": "^0.12.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:api": "ts-node ./src/shared/api/swagger.ts",
     "lint:fix": "eslint './src/**/*.{ts,tsx}'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -51,6 +56,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:3000",
   "devDependencies": {
     "@types/material-ui": "^0.21.8",
     "@types/react": "^17.0.3",
@@ -64,6 +70,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "ts-node": "^9.1.1"
   }
 }
