--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:react-hooks/recommended"
   ],
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "env": {
@@ -16,7 +17,9 @@
     "@typescript-eslint/no-empty-interface": "warn",
     "no-empty-function": "off",
     "@typescript-eslint/no-empty-function": ["warn"],
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "settings": {
     "react": {
