--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.10.4",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.3.4",
