--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.20.10",
     "@types/react-dom": "^17.0.3",
     "clsx": "^1.1.1",
+    "date-fns": "^2.21.1",
     "dayjs": "^1.10.4",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
