--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.21.1",
     "dayjs": "^1.10.4",
+    "echarts-for-react": "^3.0.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-cookie": "^4.0.3",
